Colab을 통해 생성됨

--- a/4_2_forstatement.ipynb
+++ b/4_2_forstatement.ipynb
@@ -47,68 +47,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "numbers=(1,2,3,4,5,6,7,8,9)\n",
-        "for i  in numbers:\n",
-        "  print(i)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8ZM0BC2oko3p",
-        "outputId": "b3f54192-c533-4a2c-e975-515c8092ab34"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "scope=[1,2,3,4,5]\n",
-        "for y in scope:\n",
-        "  print(y)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oVlsu_bjmKi1",
-        "outputId": "809921cf-5764-4a54-a96d-aeeddb1de7a4"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "j0T81ZhAm6vm",
@@ -282,33 +220,6 @@
     {
       "cell_type": "code",
       "source": [
-        "class =['sam', 'emily','todd']\n",
-        "for i in class:\n",
-        "  print(i)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 110
-        },
-        "id": "13TNl2f_nB8_",
-        "outputId": "9dd7fae7-43e7-49ef-ce50-227eeda3b032"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-7-aa7b62f8a8ba>, line 1)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-aa7b62f8a8ba>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    class =['sam', 'emily','todd']\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown <font color='red'>**💀 Wrong Example**\n",
         "\n",
         "class = ['Sam', 'Emily', 'Todd']\n",
@@ -332,6 +243,34 @@
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-f4c46a73b4cd>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    class = ['Sam', 'Emily', 'Todd']\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = ['Sam','Emily','Todd']\n",
+        "\n",
+        "for i in name:\n",
+        "print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        },
+        "id": "JQqCqAiFJK99",
+        "outputId": "68cd3799-57b6-466b-c390-b56d0cb354ae"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "expected an indented block after 'for' statement on line 3 (<ipython-input-5-29f5dd5be32e>, line 4)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-29f5dd5be32e>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(i)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 3\n"
           ]
         }
       ]
@@ -385,7 +324,33 @@
       "cell_type": "code",
       "source": [
         "for i in range(1):\n",
-        "  print (i)\n",
+        "  print(i)\n",
+        "\n",
+        "  type(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HnWOqdOGLHvk",
+        "outputId": "1f7a43f0-784b-4846-9c5d-4b7dc64f1d56"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1):\n",
+        "  print(i)\n",
         "\n",
         "type(i)"
       ],
@@ -414,6 +379,34 @@
           },
           "metadata": {},
           "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(3):\n",
+        "  print(x)\n",
+        "\n",
+        "  type(x)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8tfGSGgELl8E",
+        "outputId": "198a3f54-1561-412b-f7db-553279ff6ec2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n"
+          ]
         }
       ]
     },
@@ -452,6 +445,131 @@
           },
           "metadata": {},
           "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(100):\n",
+        "  print(x)\n",
+        "\n",
+        "  type(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t2PpjYtHL93V",
+        "outputId": "f93fedf3-8a03-441f-a792-74cf2648509f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n",
+            "21\n",
+            "22\n",
+            "23\n",
+            "24\n",
+            "25\n",
+            "26\n",
+            "27\n",
+            "28\n",
+            "29\n",
+            "30\n",
+            "31\n",
+            "32\n",
+            "33\n",
+            "34\n",
+            "35\n",
+            "36\n",
+            "37\n",
+            "38\n",
+            "39\n",
+            "40\n",
+            "41\n",
+            "42\n",
+            "43\n",
+            "44\n",
+            "45\n",
+            "46\n",
+            "47\n",
+            "48\n",
+            "49\n",
+            "50\n",
+            "51\n",
+            "52\n",
+            "53\n",
+            "54\n",
+            "55\n",
+            "56\n",
+            "57\n",
+            "58\n",
+            "59\n",
+            "60\n",
+            "61\n",
+            "62\n",
+            "63\n",
+            "64\n",
+            "65\n",
+            "66\n",
+            "67\n",
+            "68\n",
+            "69\n",
+            "70\n",
+            "71\n",
+            "72\n",
+            "73\n",
+            "74\n",
+            "75\n",
+            "76\n",
+            "77\n",
+            "78\n",
+            "79\n",
+            "80\n",
+            "81\n",
+            "82\n",
+            "83\n",
+            "84\n",
+            "85\n",
+            "86\n",
+            "87\n",
+            "88\n",
+            "89\n",
+            "90\n",
+            "91\n",
+            "92\n",
+            "93\n",
+            "94\n",
+            "95\n",
+            "96\n",
+            "97\n",
+            "98\n",
+            "99\n"
+          ]
         }
       ]
     },
@@ -503,6 +621,19 @@
     {
       "cell_type": "code",
       "source": [
+        "for x in range(0):\n",
+        "  print(x)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qPmw6u1KNZrk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "for z in range(0):\n",
         "  print(z)\n",
         "\n",
@@ -513,6 +644,70 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_fruit = [\"이\", \"선\", \"우\", \"짱\"]\n",
+        "\n",
+        "for i in list_fruit:\n",
+        "  print(i)\n",
+        "\n",
+        "  type(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IU4NrhzoPym7",
+        "outputId": "f08e22bd-63dc-483f-809e-4578cec0a1b2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이\n",
+            "선\n",
+            "우\n",
+            "짱\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_fruit = [\"apple\", 'banana', \"grape\", \"stawberry\", \"pear\", \"mango\"]\n",
+        "\n",
+        "for i in list_fruit:\n",
+        "  print(i)\n",
+        "\n",
+        "  type(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nw88uGbuNkB8",
+        "outputId": "9d848a19-40c3-4846-f498-dba76a03ff62"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "banana\n",
+            "grape\n",
+            "stawberry\n",
+            "pear\n",
+            "mango\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -554,6 +749,36 @@
         "  print(c)"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a2y2pGkWObQ8",
+        "outputId": "cefd3d34-cba4-4159-dfd0-0ee5a2a70bbd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n",
+            "d\n",
+            "e\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string ='abcde'\n",
+        "\n",
+        "for c in string:\n",
+        "  print(c)"
+      ],
+      "metadata": {
         "id": "d9PHvLnFPXJb",
         "outputId": "5394e0c6-7bcc-4f66-d1cb-d3a60fd64823",
         "colab": {
@@ -571,6 +796,114 @@
             "c\n",
             "d\n",
             "e\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_int = [1,2,3,4,5]\n",
+        " for c in list_int:\n",
+        "  print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        },
+        "id": "5WRvalFlOeJj",
+        "outputId": "b53aef46-a974-40ab-9173-addebe5e6fa4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "unexpected indent (<ipython-input-15-5059c11e3652>, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-5059c11e3652>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for c in list_int:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_int = [1,2,3,4,5]\n",
+        "\n",
+        "for c in list_int:\n",
+        "  print(c)\n",
+        "\n",
+        "  print(list_int[0])\n",
+        "\n",
+        "  print([0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cZoA8RcPQyc0",
+        "outputId": "a13ea16e-4ea5-47c4-e71f-e53526141b50"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "1\n",
+            "[0]\n",
+            "2\n",
+            "1\n",
+            "[0]\n",
+            "3\n",
+            "1\n",
+            "[0]\n",
+            "4\n",
+            "1\n",
+            "[0]\n",
+            "5\n",
+            "1\n",
+            "[0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " list_int = [1,2,3,4,5]\n",
+        "\n",
+        "for c in list_int:\n",
+        "  print(list_int[0])\n",
+        "\n",
+        "  print([0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gLYs6kguRWyV",
+        "outputId": "1de0a991-2070-4fe6-d424-fc7cbc1841a9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "[0]\n",
+            "1\n",
+            "[0]\n",
+            "1\n",
+            "[0]\n",
+            "1\n",
+            "[0]\n",
+            "1\n",
+            "[0]\n"
           ]
         }
       ]
@@ -629,6 +962,34 @@
           "text": [
             "1\n",
             "[0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict1 ={'a':100, 'b':200, 'c':300}\n",
+        "\n",
+        "for i in dict1:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "30X391U0ReRj",
+        "outputId": "ddf2d017-3816-43f5-bb05-778edf7efc6d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n"
           ]
         }
       ]
@@ -800,6 +1161,37 @@
         "scope=[1,2,3,4,5]\n",
         "\n",
         "for i in scope:\n",
+        "  print(i)\n",
+        "  if i<2:\n",
+        "    continue\n",
+        "  else:\n",
+        "    break"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MbDkHQCWU0Ed",
+        "outputId": "336be88c-d1ac-456b-ff43-c15546924bee"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scope=[1,2,3,4,5]\n",
+        "\n",
+        "for i in scope:\n",
         "  print(i)        #화면에 해당 정수를 출력한 후 그 수가 3 보다 작으면 그 다음 숫자를 출력하고, 3 보다 크거나 같으면 종료\n",
         "  if i<3:\n",
         "    continue      # 이 경우 continue 없이도 코드라인 작성 가능\n",
@@ -839,6 +1231,39 @@
       "metadata": {
         "id": "znGW0EEdS7Qq"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scope = [1,2,3,4,5]\n",
+        "\n",
+        "for x in scope:\n",
+        "  print(x)\n",
+        "else:\n",
+        "  print('Perfect')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ecap89o1VVYz",
+        "outputId": "b47916e0-f485-4086-b097-2b64383cc180"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "Perfect\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
