--- a/6_definingfunctions.ipynb
+++ b/6_definingfunctions.ipynb
@@ -36,26 +36,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "def add_txt(t1, t2):\n",
-        "  t_result=t1 +t2\n",
-        "  #return t_reasult\n",
-        "\n",
-        "  text1=\"Hello,\"\n",
-        "  text2=\"woeld!\"\n",
-        "\n",
-        "  combined_text = add_txt(text1, text2)\n",
-        "\n",
-        "  print(combined_text)"
-      ],
-      "metadata": {
-        "id": "B2DwbcQqOSZV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "v-gjA5sdhg68"
@@ -169,36 +149,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def add_number(n1,n2):\n",
-        "  n_result = n1 + n2\n",
-        "  return n_result\n",
-        "num1=159438590\n",
-        "num2=1\n",
-        "\n",
-        "add_nums = add_number(num1, num2)\n",
-        "print(add_nums)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zEldpnWaP0wF",
-        "outputId": "5bb456d6-9c7b-4ae5-db0a-6983e0087edd"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "159438591\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#2a number arguments with return\n",
         "\n",
         "def add_number(n1,n2):\n",
@@ -282,24 +232,6 @@
       "metadata": {
         "id": "Eq1Coxg80jt0"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def my_len(input_list):\n",
-        "  length = 0\n",
-        "  for i in input_list:\n",
-        "    length += 1\n",
-        "    return length\n",
-        "\n",
-        "    my_list = [11,22,33,44,55]\n",
-        "    print(my_len(my_list))"
-      ],
-      "metadata": {
-        "id": "veeYxi4eRVxO"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -552,25 +484,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def add(a, b):\n",
-        "    result = a + b\n",
-        "    return result\n",
-        "\n",
-        "    num1 = 5\n",
-        "    num2 = 3\n",
-        "\n",
-        "    sum_result = add(num1, num2)\n",
-        "    print(\"The sum of %d and %d is %d\" % (num1, num2, sum_result))"
-      ],
-      "metadata": {
-        "id": "RuzVnAVqZLKg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#3b\n",
         "\n",
         "def add(a, b):\n",
@@ -649,6 +562,36 @@
     {
       "cell_type": "code",
       "source": [
+        "def add_txt1(t1,t2='Python'):\n",
+        "  print(t1 + ':' + t2)\n",
+        "\n",
+        "add_txt1('Best')\n",
+        "add_txt1(t1='My friend', t2='Python')\n",
+        "add_txt1(t1='My buddy')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YMqt2I_nh4QQ",
+        "outputId": "cd4bbf95-43c6-491a-c946-6221520065bd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best:Python\n",
+            "My friend:Python\n",
+            "My buddy:Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 위의 함수 정의 및 호출 이해 완료\n",
         "def add_txt1(t1,t2='Python'): #add_txt1은 t1과 t2를 ':'로 연결한 뒤 출력하는 함수다.\n",
         "  print(t1 + ':' + t2) # 연결 기호 +\n",
@@ -689,6 +632,27 @@
       "metadata": {
         "id": "SmGNZArBgZq_"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def func_uncertain(*args):\n",
+        "  print(args)\n",
+        "\n",
+        "  func_uncertain()\n",
+        "\n",
+        "  func_uncertain(1,2,3,)\n",
+        "  func_uncertain('apple', 'banana', 'cherry', 'date')\n",
+        "  func_uncertain(True)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Uj52USEQjA85"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -746,6 +710,20 @@
       "metadata": {
         "id": "WXchx1DkjzML"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def func_kwa(width, height, **kwargs):\n",
+        "  print(kwargs)\n",
+        "  func_kwa(10, 20)\n",
+        "  func_kwa(10, 20, depth=30, color='blue')"
+      ],
+      "metadata": {
+        "id": "QcaO0z2tkwxZ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
